call backend methods for products

--- a/online-shop/online-shop-frontend/src/app/app.component.html
+++ b/online-shop/online-shop-frontend/src/app/app.component.html
@@ -4,7 +4,7 @@
     <ul class="nav navbar-nav">
       <a class ="nav-link"  routerLink="" routerLinkActive="active">Despre noi</a>
       <a class ="nav-link"  routerLink="/products" routerLinkActive="active">Produse</a>
-      <a class ="nav-link"  routerLink="#" routerLinkActive="active">Designeri</a>
+      <a class ="nav-link"  routerLink="/designers" routerLinkActive="active">Designeri</a>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
