added parts of frontend on designers and products

--- a/online-shop/online-shop-frontend/src/app/app.component.html
+++ b/online-shop/online-shop-frontend/src/app/app.component.html
@@ -4,13 +4,13 @@
     <ul class="nav navbar-nav">
       <a class ="nav-link"  routerLink="" routerLinkActive="active">Despre noi</a>
       <a class ="nav-link"  routerLink="/products" routerLinkActive="active">Produse</a>
-      <a class ="nav-link"  routerLink="#" routerLinkActive="active">Designeri</a>
+      <a class ="nav-link"  routerLink="/designers" routerLinkActive="active">Designeri</a>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
       <a class ="nav-link" *ngIf = "!_loginService.loggedIn()" routerLink="/register" routerLinkActive="active">Autentificare</a>
       <a class ="nav-link" *ngIf = "!_loginService.loggedIn()" routerLink="/login" routerLinkActive="active">Înregistrare</a>
-      
+
 
       <a  class ="nav-link" *ngIf = "_loginService.loggedIn()" (click)='openModal()'>Editează contul</a>
       <a class ="nav-link" *ngIf = "_loginService.loggedIn()" (click)="signOut()">Ieși din cont</a>
