--- a/online-shop/online-shop-frontend/src/app/pages/products-tab/product-details/product-details.component.html
+++ b/online-shop/online-shop-frontend/src/app/pages/products-tab/product-details/product-details.component.html
@@ -1,1 +1,12 @@
-<p>{{currentProduct.productName}}</p>
+<div class="product-container">
+  <img src="assets/images/ProductPhoto.png"  alt="Product" class="product-img">
+  <div class="string-details">
+    <p class="product-title"> {{currentProduct.productName}}</p>
+    <span class="product-description-container">
+    <p class="product-description-text">Despre produs</p>
+    <p class="product-description">{{currentProduct.description}}</p>
+  </span>
+    <p class="product-price">{{currentProduct.price}} lei</p>
+  </div>
+
+</div>
