--- a/online-shop/online-shop-frontend/src/app/pages/products-tab/products-tab.component.html
+++ b/online-shop/online-shop-frontend/src/app/pages/products-tab/products-tab.component.html
@@ -9,7 +9,7 @@
       <div class="card-body product-body">
         <h5 class="card-title">{{product.productName}}</h5>
         <p class="card-text">{{product.description}}</p>
-        <a (click)="goToProductShow(product.idProduct)" class="btn button-details">Vezi detalii</a>
+        <a (click)="goToProductShow(product.id)" class="btn button-details">Vezi detalii</a>
       </div>
       <div class="card-footer product-price">{{product.price}} lei</div>
     </div>
