--- a/online-shop/online-shop-frontend/src/app/pages/shop-cart/shop-cart.component.css
+++ b/online-shop/online-shop-frontend/src/app/pages/shop-cart/shop-cart.component.css
@@ -3,9 +3,152 @@
   margin-top: 50px;
   margin-bottom: 40px;
   color: #38a3a5;
+  font-size: 22px;
+  font-weight: bold;
 }
 
+.empty-cart-text{
+  font-size: medium;
+  color: #074f57;
+}
+.empty-cart-photo{
+  height: 30%;
+  width: 30%;
+}
+.empty-cart{
+  display: flex;
+  flex-direction: row;
+  gap: 3%;
+  margin-right: 10%;
+  margin-left: 10%;
+  align-items: center;
+  justify-content: center;
+}
 
-.product_shop{
+.cart-container{
   background-color: rgba(56,163,165,0.1);
+  margin-right: 10%;
+  margin-left: 10%;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.Cart-Items{
+  margin-top: 2%;
+  width: 100%;
+  height: 30%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: #074f57 groove 1px;
+}
+
+.image-box{
+  text-align: center;
+}
+
+.about{
+  height: 100%;
+  width: 30%;
+}
+
+.title{
+  padding-top: 10px;
+  font-size: 20px;
+  font-family: 'Open Sans', serif;
+  font-weight: 600;
+  color: #074f57;
+}
+
+.counter{
+  width: 15%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.update_quantity{
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: #38a3a5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-family: 'Open Sans', serif;
+  font-weight: 900;
+  color: white;
+  cursor: pointer;
+}
+
+.count{
+  font-size: 18px;
+  font-family: 'Open Sans', serif;
+  font-weight: 600;
+  color: #202020;
+}
+
+.prices{
+  height: 100%;
+  text-align: right;
+}
+
+.amount{
+  padding-top: 20px;
+  font-size: 22px;
+  font-family: 'Open Sans', serif;
+  font-weight: 800;
+  color: #202020;
+}
+
+.remove{
+  padding-top: 5px;
+  font-size: 14px;
+  font-family: 'Open Sans', serif;
+  font-weight: 600;
+  color: #E44C4C;
+  cursor: pointer;
+}
+
+hr{
+  width: 66%;
+  float: right;
+  margin-right: 5%;
+}
+
+.checkout{
+  float: right;
+  margin-right: 5%;
+  width: 30%;
+  padding-bottom: 3%;
+}
+
+.total{
+  display: flex;
+  justify-content: flex-end;
+  font-weight: bold;
+  font-size: 25px;
+  font-family: 'Open Sans', serif;
+}
+
+.total-amount{
+  font-weight: bold;
+  font-size: 25px;
+  font-family: 'Open Sans', serif;
+  color: #202020;
+}
+
+.shop-button{
+  margin-top: 10px;
+  width: 100%;
+  height: 40px;
+  border: none;
+  background:  #074f57;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 16px;
+  font-family: 'Open Sans', serif;
+  font-weight: 400;
+  color: white;
 }
