added order data

--- a/online-shop/online-shop-frontend/src/app/pages/shop-cart/shop-cart.component.html
+++ b/online-shop/online-shop-frontend/src/app/pages/shop-cart/shop-cart.component.html
@@ -30,5 +30,5 @@
     <div class="total">Total: &nbsp;</div>
     <div class="total-amount">{{totalPrice}} lei</div>
   </div>
-  <button class="shop-button">Plasează comanda</button></div>
+  <button class="shop-button" (click)="goToOrder()">Plasează comanda</button></div>
 </div>
