--- a/online-shop/online-shop-frontend/src/app/app.component.html
+++ b/online-shop/online-shop-frontend/src/app/app.component.html
@@ -11,8 +11,8 @@
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
-      <a class ="nav-link" *ngIf = "!_loginService.loggedIn()" routerLink="/register" routerLinkActive="active">Autentificare</a>
-      <a class ="nav-link" *ngIf = "!_loginService.loggedIn()" routerLink="/login" routerLinkActive="active">Înregistrare</a>
+      <a class ="nav-link" *ngIf = "!_loginService.loggedIn()" routerLink="/autentificare" routerLinkActive="active">Autentificare</a>
+      <a class ="nav-link" *ngIf = "!_loginService.loggedIn()" routerLink="/inregistrare" routerLinkActive="active">Înregistrare</a>
 
 
       <a  class ="nav-link" *ngIf = "_loginService.loggedIn()" (click)='openModal()'>Editează contul</a>
