--- a/online-shop/online-shop-frontend/src/app/app.component.html
+++ b/online-shop/online-shop-frontend/src/app/app.component.html
@@ -5,6 +5,7 @@
       <a class ="nav-link"  routerLink="" routerLinkActive="active">Despre noi</a>
       <a class ="nav-link"  routerLink="/products" routerLinkActive="active">Produse</a>
       <a class ="nav-link"  routerLink="/designers" routerLinkActive="active">Designeri</a>
+      <a class ="nav-link"  routerLink="/placedOrders" routerLinkActive="active" *ngIf = "_loginService.loggedIn()" >Comenzi</a>
       <a class ="nav-link"  routerLink="/shopCart" routerLinkActive="active" *ngIf="isClient">Coș de cumpărături</a>
       <a class ="nav-link"  routerLink="/savedProducts" routerLinkActive="active" *ngIf="isClient">Produse salvate</a>
 
