--- a/online-shop/online-shop-frontend/src/app/pages/about/about.component.css
+++ b/online-shop/online-shop-frontend/src/app/pages/about/about.component.css
@@ -13,6 +13,8 @@ ngb-carousel{
   text-align: center;
   margin-top: 50px;
   margin-bottom: 40px;
+  font-weight: bolder;
+  font-size: 25px;
   color: #38a3a5;
 }
 
