--- a/online-shop/online-shop-frontend/src/app/pages/order-page/order-page.component.html
+++ b/online-shop/online-shop-frontend/src/app/pages/order-page/order-page.component.html
@@ -48,6 +48,7 @@
         </div>
         <p class="total-price">Total: {{totalPrice}} lei</p>
         <p class="error-order">{{errorMessage}}</p>
+        <p class="done-command" *ngIf="placedOrderBool">Comanda a fost plasată!</p>
         <button type="submit" class="place-order-button">Plasează comanda</button>
       </form>
     </div>
