--- a/online-shop/online-shop-frontend/src/app/dialog/add-schita/add-schita.component.html
+++ b/online-shop/online-shop-frontend/src/app/dialog/add-schita/add-schita.component.html
@@ -1,5 +1,5 @@
 <h2 style="text-align: center;">Adauga schita</h2>
-<p>Suntem foarte bucuroși să îi dăm viață ideii tale. Nu ezita să fi cât mai creativ și să specifici toate detaliile care dorești să apară pe festivemtația ta</p>
+<p  style="text-align: center;"> Suntem foarte bucuroși să îi dăm viață ideii tale. Nu ezita să fi cât mai creativ și să specifici toate detaliile care dorești să apară pe vestimentatia ta</p>
 
 <mat-dialog-content >
     <mat-error style="text-align: center;">{{msg}}</mat-error>
@@ -15,11 +15,11 @@
         <input matInput placeholder="" formControlName="description" required>
       </mat-form-field><br>
     </form>
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="fill" style="margin-left: 20%;">
             <mat-label>Cardiolog</mat-label>
             <mat-select [formControl]="selectedDesigner" required name="designer">
             <mat-option *ngFor="let designer of allDesginersList" [value]="designer.id">
-                {{designer.firstName}} {{designer.lastName}}
+                {{designer.firstNameDesigner}} {{designer.lastNameDesigner}}
             </mat-option>
             </mat-select>
         </mat-form-field>
