--- a/online-shop/online-shop-frontend/src/app/app.component.html
+++ b/online-shop/online-shop-frontend/src/app/app.component.html
@@ -9,7 +9,7 @@
       <a class ="nav-link"  routerLink="/shopCart" routerLinkActive="active" *ngIf="isClient">Coș de cumpărături</a>
       <a class ="nav-link"  routerLink="/savedProducts" routerLinkActive="active" *ngIf="isClient">Produse salvate</a>
       <a class ="nav-link"  routerLink="/schiteAsignate" routerLinkActive="active" *ngIf="isDesigner">Schite asignate</a>
-      <a class ="nav-link"  routerLink="/schiteAsignate" routerLinkActive="active" *ngIf="isClient">Schitele mele</a>
+      <a class ="nav-link"  routerLink="/schiteClient" routerLinkActive="active" *ngIf="isClient">Schitele mele</a>
 
     </ul>
 
