--- a/online-shop/online-shop-frontend/src/app/pages/schitele-mele/schitele-mele.component.html
+++ b/online-shop/online-shop-frontend/src/app/pages/schitele-mele/schitele-mele.component.html
@@ -1,5 +1,5 @@
 <div class="designer-list-general">
-    <h3 class="designer-page-title">Schite asignate</h3>
+    <h3 class="designer-page-title">Schitele mele</h3>
     <div *ngFor="let product of myProducts" class="designer-container">
       <img src="assets/images/UserPhoto.png"  alt="Product" class="user-img">
       <div class="designer-details">
@@ -7,8 +7,7 @@
             <p class="designer-name">{{product.productName}} - {{product.status}} </p>
           </span>
         <p class="designer-description"> {{product.description}}</p>
-        
+
       </div>
     </div>
   </div>
-  
